--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-email.svg" alt="Email Icon"">
+						<img src="icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">preston@fattiretours.com</p>
@@ -59,7 +59,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-phone.svg" alt="Phone Icon"">
+						<img src="icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">+33.07.79.26.26.23</p>
