--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<p class="text-detail">preston@fattiretours.com</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -65,7 +65,7 @@
 						<p class="text-detail">+33.07.79.26.26.23</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -77,13 +77,13 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-website.svg" alt="Website Icon"">
+						<img src="icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">fattiretours.com</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
@@ -95,13 +95,13 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-address.svg" alt="Address Icon"">
+						<img src="icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">24 rue Edgar Faure, 75015, Paris, France</p>
 					</div>
 					<div class="col">
-						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
+						<img src="right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
 					</div>
 				</div>
 			</div>
